Wed Sep 22 14:21:54 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: on__scan event removed.

	* parse.y [ripper]: event name is changed: on__XXX -> on_XXX.

	* ext/ripper/eventids2.c: ditto.

	* ext/ripper/ripper.rb.in: ditto.

	* ext/ripper/lib/ripper.rb: sync with ripper.rb.in.

	* ext/ripper/lib/ripper/tokenizer: ditto.

	* ext/ripper/lib/ripper/filter: new file.

	* sample/ripper/colorize.rb: new file.

	* sample/ripper/strip-comment.rb: new file.

Wed Sep 22 13:50:49 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (hash_alloc): was using tbl pointer without
	  initialization.

Wed Sep 22 13:38:12 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_rehash): add iteration check.  [ruby-dev:24301]

	* st.c (st_foreach): add deep check.

	* hash.c (rb_hash_fetch): returns KeyError instead of IndexError.

	* hash.c (env_fetch): ditto.

Wed Sep 22 13:02:02 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_call_handler): workaround for Ctrl-C.

Wed Sep 22 09:04:41 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y: remove global variables ruby_eval_tree and
	  ruby_eval_tree_begin.

	* array.c (rb_ary_collect_bang): element size might change during
	  comparison.  [ruby-dev:24300]

	* array.c (rb_ary_reject_bang): ditto. [ruby-dev:24300]

	* array.c (rb_ary_eql): ditto. [ruby-dev:24300]

Wed Sep 22 00:11:12 2004  Dave Thomas  <dave@pragprog.com>

	* process.c: Add documentation for fork()

Tue Sep 21 18:29:49 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_uniq_bang): element size might change during
	  comparison.  [ruby-dev:24298]

Mon Sep 20 17:46:51 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/lib/ripper/tokenizer.rb: fix typo.

Mon Sep 20 17:38:43 2004  Minero Aoki  <aamine@loveruby.net>

	* test/ripper/test_scanner_events.rb: tokens must be reordered.

	* ext/ripper/lib/ripper/tokenizer.rb: ditto.

Mon Sep 20 16:58:16 2004  Minero Aoki  <aamine@loveruby.net>
