@@ -3,7 +3,6 @@
 /* static	char	sccsid[] = "@(#) st.c 5.1 89/12/14 Crucible"; */
 
 #include "config.h"
-#include "defines.h"
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
